--- a/style.css
+++ b/style.css
@@ -27,11 +27,16 @@ nav{
     font-weight: bold;
     font-size: 20px;
 }
+.navbrand .toggler {
+    display: none;
+    cursor: pointer;
+}
 ul{
     display: flex;
     justify-content: space-around;
     list-style-type: none;
     gap: 50px;
+    height: auto;
 }
 ul li a {
     text-decoration: none;
@@ -51,11 +56,15 @@ ul li a::after{
 ul li a:hover::after {
     width: 100%;
 }
+.show-links {
+    height: 10rem;
+}
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
+    height: auto;
 }
 .btn a {
     text-decoration: none;
@@ -73,6 +82,38 @@ ul li a:hover::after {
 }
 .icon i {
     color: white;
+}
+@media (max-width: 1100px){
+    nav {
+        display: block;
+        padding-top: 1rem;
+    }
+    .navbrand{
+        display: flex;
+        justify-content: space-between;
+    }
+    .navbrand .toggler {
+        display: block;
+        font-size: 1.5rem;
+        color: rgb(108, 108, 192);
+        position: absolute;
+        right: 20px;
+    }
+    ul {
+        height: 0;
+        display: block;
+        overflow: hidden;
+    }
+    li {
+        padding: 0.5rem 1rem;
+    }
+    .btn {
+        height: 0;
+        overflow: hidden;
+    }
+    .btn-show {
+        height: 1.5rem;
+    }
 }
 .main {
     display: flex;
@@ -118,6 +159,7 @@ ul li a:hover::after {
     background-color: transparent;
     color: rgb(108, 108, 192);
     border: 1px solid rgb(108, 108, 192);
+    margin-left: 30px;
 }
 .main .text .button button:last-child:hover {
     background-color: rgb(108, 108, 192);
@@ -127,5 +169,43 @@ ul li a:hover::after {
 .main .text .footer {
     position: absolute;
     bottom: 0;
-    color: #e0dcdc;
+    color: #413e3e;
 }
+@media (max-width: 1100px){
+    .main {
+        display: block;
+        margin-top: 0;
+    }
+    .main .text {
+        width: 70%;
+        padding-top: 0;
+    }
+    .main .text .button button:last-child {
+        margin-left: 10px;
+    }
+    .main .img  {
+        width: 70%;
+    }
+    .main .img img {
+        padding-left: 100px;
+        height: auto;
+        padding-top: 70px;
+    }
+    .main .text .footer {
+        position: absolute;
+        bottom: -20px;
+        left: 40%;
+    }
+}
+@media (max-width:1255px) and (min-width:1100px) {
+    .main .text .button button:last-child {
+        margin-left: 10px;
+    }
+}
+@media (max-width:1255px) and (min-width:1100px) {
+    .main .text .footer {
+        position: absolute;
+        bottom: -20px;
+        left: 40%;
+    }
+} 
