--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ nav{
     cursor: pointer;
 }
 ul{
+    padding-top: 0.2rem;
     display: flex;
     justify-content: space-around;
     list-style-type: none;
@@ -57,7 +58,7 @@ ul li a:hover::after {
     width: 100%;
 }
 .show-links {
-    height: 10rem;
+    height: 12rem;
 }
 .btn {
     display: flex;
@@ -131,7 +132,7 @@ ul li a:hover::after {
 }
 .main .img img {
     width: 100%;
-    height: 95vh;
+    height: auto;
 }
 .main .text h1 {
     color: rgb(108, 108, 192);
@@ -189,7 +190,7 @@ ul li a:hover::after {
     .main .img img {
         padding-left: 100px;
         height: auto;
-        padding-top: 70px;
+        padding-top: 40px;
     }
     .main .text .footer {
         position: absolute;
@@ -198,14 +199,24 @@ ul li a:hover::after {
     }
 }
 @media (max-width:1255px) and (min-width:1100px) {
+    .main .text .footer {
+        position: absolute;
+        bottom: -20px;
+        left: 40%;
+    }
     .main .text .button button:last-child {
         margin-left: 10px;
     }
-}
-@media (max-width:1255px) and (min-width:1100px) {
-    .main .text .footer {
-        position: absolute;
-        bottom: -20px;
-        left: 40%;
-    }
 } 
+@media (max-width: 470px){
+    .main .text {
+        padding-top: 0;
+        padding-left: 50px;
+    }
+    .main .text .button button:last-child {
+        padding-left: 39px;
+        padding-right: 39px;
+        margin-left: 0;
+        margin-top: 10px;
+    }
+}
